ns.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: otus-four
    labels:
        istio-injection: enabled
