svc.yaml
# Auth Service

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: otus-four
  labels:
    app: authentication
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: authentication

---

# Business Service

apiVersion: v1
kind: Service
metadata:
  name: business-service
  namespace: otus-four
  labels:
    app: business 
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: business
