gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: otus-four-gateway
  namespace: otus-four

spec:
  selector:
    app: istio-ingress
  servers:
    - port:
        targetPort: 8080
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "arch.homework"
