dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: otus-four-business-dr
  namespace: otus-four
spec:
  host: business-service.otus-four.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: otus-four-auth-dr
  namespace: otus-four
spec:
  host: auth-service.otus-four.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1
