virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: otus-four-virtual-service
  namespace: otus-four
spec:
  hosts:
    - arch.homework 
  gateways:
    - otus-four-gateway 
  http:
    - name: "auth-routes"
      match:
        - uri:
            prefix: "/register"
          method:
            exact: "POST"
        - uri:
            prefix: "/login" 
          method:
            exact: "POST"
        - uri:
            prefix: "/change-username"
          method:
            exact: "POST"
        - uri:
            prefix: "/change-password"
          method:
            exact: "POST"
        - uri:
            prefix: "/delete"
          method:
            exact: "DELETE"
      route:
        - destination:
            host: auth-service.otus-four.svc.cluster.local
            subset: v1
    - name: "business-routes"
      match:
        - method:
            exact: "GET"
        - method:
            exact: "PATCH"
        - uri:
            exact: "/"
      route:
        - destination:
            host: business-service.otus-four.svc.cluster.local
            subset: v1
